--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html::-webkit-scrollbar {
 }
 
 body{
-    background-color: #f9f9f9;
+    background-color: #eaeaea;
 }
 
 .top-bar{
@@ -80,7 +80,6 @@ ul li:hover{
     background-repeat: no-repeat;
     background-position: center right top;
     background-size: cover;
-    /* margin-top:5rem; */
     display:flex;
     align-items: center;
     color: #8dc0e4;
@@ -199,9 +198,9 @@ background: linear-gradient(to right, #3f4c6b, #606c88);
     font-size: 1em; 
   }
 
-/* -----------reviews section----------- */
+/* -----------partner section----------- */
 
- .reviews {
+ .partners {
             padding: 10px 0;
             background-color: #f9f9f9;
         }
@@ -229,6 +228,7 @@ background: linear-gradient(to right, #3f4c6b, #606c88);
             justify-content: center;
             transition: transform 0.3s ease-in-out;
         }
+        
         .swiper-slide .box {
             background-color: #fff;
             padding: 20px;
@@ -249,7 +249,11 @@ background: linear-gradient(to right, #3f4c6b, #606c88);
         .swiper-pagination {
         display: none;
         }
-        .rev-img img {
+        .swiper-slide img {
+            max-width: 100px;
+            height: auto;
+        }
+        .partner-logo .profile-img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
@@ -271,31 +275,6 @@ background: linear-gradient(to right, #3f4c6b, #606c88);
             color: #666;
         }
 
-
-/* ------------partner section------------- */
-.partners{
-    background-color: #edeaea;
-
-}
-.partner-logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    flex-flow: wrap;
-    
-}
-.partners p{
-    font-weight: 600;
-    font-size: 35px;
-    margin-left: 3rem;
-}
-
-.partner-logo img{
-    width: 10%;
-    display: inline;
-    margin-bottom: 2rem;
-}
 
 
 /* -------------- footer -------------- */
