--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,3 @@
-
-
 .top-bar {
   background-color: #fafafa;
   display: flex;
@@ -48,10 +46,38 @@ nav {
   color: #343434;
 }
 
-ul .tapcolor{
+ul .tapcolor {
   color: #ffc400;
 }
 
 ul li:hover {
   color: #1d6cdc;
+}
+
+body {
+  background-color: #f8f9fa;
+}
+.blog-title {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.card-img-top {
+  height: 200px;
+  object-fit: cover;
+}
+.card-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+.card-text {
+  font-size: 1rem;
+  color: #6c757d;
+}
+
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
 }
