--- a/contactform.css
+++ b/contactform.css
@@ -1,5 +1,6 @@
-
-
+body {
+  background-color: #f8f9fa;
+}
 
 .top-bar {
   background-color: #fafafa;
@@ -12,15 +13,16 @@
   margin-left: 2rem;
 }
 
-.top-bar .dropdown {
-  margin-right: 2rem;
-}
-
 .top-bar-icons {
   display: flex;
   margin: 0.5rem 1rem;
   gap: 2rem;
   cursor: pointer;
+}
+
+#map {
+  height: 400px;
+  width: 100%;
 }
 
 nav {
@@ -49,10 +51,38 @@ nav {
   color: #343434;
 }
 
-ul .tapcolor{
+ul .tapcolor {
   color: #ffc400;
 }
 
 ul li:hover {
   color: #1d6cdc;
+}
+
+.contact-title {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.row {
+  color: #9a9a9a;
+}
+.form-control,
+.btn {
+  border-radius: 0.25rem;
+}
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
+}
+
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
 }
