--- a/style.css
+++ b/style.css
@@ -276,99 +276,114 @@ ul .tapcolor {
 /* -------------- footer -------------- */
 
 .footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  background: #10182f;
-  border-radius: 10px 10px 0 0;
-}
-.footer .footer-row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 1rem;
-  padding: 50px;
-  
-}
-
-.footer-col{
-  width: 30%;
-}
-
-.d-flex{
-  margin-top: -2rem;
-
-}
-
-.footer-row .footer-col h4 {
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-.footer-col .links {
-  margin-top: 20px;
-}
-.footer-col .links li {
-  list-style: none;
-  margin-bottom: 10px;
-  color: #bfbfbf;
-}
-.footer-col .links li a {
-  text-decoration: none;
-  color: #bfbfbf;
-}
-.footer-col .links li a:hover {
-  color: #fff;
-}
-.footer-col p {
-  margin: 20px 0;
-  color: #bfbfbf;
-  max-width: 300px;
-}
-.footer-col .rounded-circle{
-  width: 25%;
-}
-
-.footer-col .icons {
-  display: flex;
-  margin: 70px 0px 0px 50px;
-  font-size: 25px;
-  gap: 30px;
-  cursor: pointer;
-}
-.footer-col .icons .icon {
-  color: #bdc0c5;
-}
-.footer-col .icons .icon:hover {
-  color: #fff;
-}
-
-.btn-outline-info{
-  position: fixed;
-  bottom: 10%;
-  right: 2%;
-}
-
-@media (max-width: 768px) {
-  .footer {
     position: relative;
     bottom: 0;
-    left: 0;
-    transform: none;
     width: 100%;
-    border-radius: 0;
-  }
-  .footer .footer-row {
-    padding: 20px;
+    background: #10182f;
+    border-radius: 10px 10px 0 0;
+}
+.footer .footer-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     gap: 1rem;
-  }
-  .footer-col form {
-    display: block;
-  }
-  .footer-col form :where(input, button) {
-    width: 100%;
-  }
-  .footer-col form button {
-    margin: 10px 0 0 0;
-  }
+    padding: 50px;
+}
+.footer-col {
+    width: 30%;
+}
+.d-flex {
+    margin-top: -2rem;
+}
+.footer-row .footer-col h4 {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+.footer-col .links {
+    margin-top: 20px;
+}
+.footer-col .links li {
+    list-style: none;
+    margin-bottom: 10px;
+    color: #bfbfbf;
+}
+.footer-col .links li a {
+    text-decoration: none;
+    color: #bfbfbf;
+}
+.footer-col .links li a:hover {
+    color: #fff;
+}
+.footer-col p {
+    margin: 20px 0;
+    color: #bfbfbf;
+    max-width: 300px;
+}
+.footer-col .rounded-circle {
+    width: 25%;
+}
+.footer-col .icons {
+    display: flex;
+    margin: 70px 0px 0px 50px;
+    font-size: 25px;
+    gap: 30px;
+    cursor: pointer;
+}
+.footer-col .icons .icon {
+    color: #bdc0c5;
+}
+.footer-col .icons .icon:hover {
+    color: #fff;
+}
+.btn-outline-info {
+    position: fixed;
+    bottom: 10%;
+    right: 2%;
+}
+@media (max-width: 768px) {
+    .footer .footer-row {
+        flex-direction: column;
+        padding: 20px;
+    }
+    .footer-col {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .footer-col .icons {
+        justify-content: center;
+        margin: 20px 0 0;
+    }
+    .d-flex {
+        flex-direction: column;
+        align-items: center;
+    }
+    .d-flex img {
+        width: 50%;
+        margin-bottom: 10px;
+    }
+    .d-flex h2 {
+        text-align: center;
+    }
+    .text-end {
+        text-align: center !important;
+    }
+}
+@media (max-width: 480px) {
+    .footer {
+        padding: 10px;
+    }
+    .footer-row {
+        padding: 10px;
+    }
+    .footer-col .links li {
+        font-size: 0.9rem;
+    }
+    .footer-row .footer-col h4 {
+        font-size: 1.2rem;
+    }
+    .btn-outline-info {
+        bottom: 5%;
+        right: 5%;
+    }
 }
