--- a/blog.css
+++ b/blog.css
@@ -13,13 +13,13 @@
   margin-right: 2rem;
 }
 
-.top-bar-icons{
+.top-bar-icons {
   display: flex;
   margin: 0.5rem 1rem;
   gap: 2rem;
   cursor: pointer;
 }
-.top-bar-icons a{
+.top-bar-icons a {
   color: #a5a5a5;
 }
 
@@ -83,4 +83,13 @@ body {
   color: white;
   padding: 20px 0;
   text-align: center;
+}
+
+@media (max-width: 375px) {
+  .logo {
+    max-width: 300px;
+  }
+  .top-bar span {
+    font-size: 12px;
+  }
 }
