--- a/services.css
+++ b/services.css
@@ -2,32 +2,12 @@
 
 /* ------nav------ */
 
-.top-bar {
-  background-color: #fafafa;
-  display: flex;
-  justify-content: space-between;
-  padding: 4px;
-}
-.top-bar span {
-  font-size: 18px;
-  margin-left: 2rem;
-}
-
-.top-bar-icons {
-  display: flex;
-  margin: 0.5rem 1rem;
-  gap: 2rem;
-  cursor: pointer;
-}
-.top-bar-icons a {
-  color: #a5a5a5;
-}
 nav {
   background-color: #ffffff;
 }
 
 #navbarNav {
-  margin-left: 20%;
+  margin-left: 10%;
 }
 
 .nav-item .tapcolor {
@@ -68,7 +48,7 @@ nav {
   .logo {
     max-width: 300px;
   }
-  .top-bar span {
-    font-size: 12px;
+    .navbar-brand span {
+    display: none;
   }
 }
