--- a/style.css
+++ b/style.css
@@ -18,50 +18,65 @@ html::-webkit-scrollbar {
 
 body {
   background-color: #eaeaea;
-  padding-top: 130px;
 }
+
+/* pop up modal */
+        .popup-modal {
+            position: fixed;
+            top: 6rem;
+            right: 2em;
+            width: 320px;
+            z-index: 1050;
+            background-color: #10182f;
+            border-radius: 1rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: block; /*Initially hidden*/
+        }
+        .popup-modal .close-btn {
+            color: #fff;
+            cursor: pointer;
+            font-size: 1.5rem;
+            margin-left: auto;
+        }
+        .popup-modal img {
+            width: 100px;
+            height: 100px;
+        }
+        .popup-modal h2 {
+            color: #fff;
+            margin-left: 10px;
+        }
+        .popup-modal ul {
+            padding: 0;
+            list-style: none;
+        }
+        .popup-modal li {
+            color: #fff;
+            margin-bottom: 10px;
+        }
+        .popup-modal .btn {
+            margin-top: 10px;
+        }
 
 /* ------------Navbar------------ */
 
-.top-bar {
-  background-color: #fafafa;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.top-bar span {
-  font-size: 18px;
-  margin-left: 2rem;
-}
-.top-bar-icons {
-  display: flex;
-  margin: 0.5rem 1rem;
-  gap: 2rem;
-  cursor: pointer;
-}
-.top-bar-icons a {
-  color: #a5a5a5;
-}
-
 nav {
   background-color: #ffffff;
+  overflow: hidden;
 }
 
 #navbarNav {
-  margin-left: 20%;
+  margin-left: 10%;
 }
 
 .nav-item a {
   color: #515151;
 }
 
-.logo {
-  height: 8%;
-  width: 8%;
-  margin: 0.5% 6% 0.5% 6%;
+.navbar-brand .logo {
+  width: 100px;
+  height: 70px;
 }
-
 .nav-link {
   margin-right: 10px;
   font-size: 18px;
@@ -90,41 +105,6 @@ ul .tapcolor {
   background-size: cover;
   display: flex;
   align-items: center;
-  color: #8dc0e4;
-}
-
-.container {
-  padding: 0%;
-}
-
-.text span {
-  color: #ffc400;
-}
-
-.text p {
-  font-size: 16px;
-  font-weight: 600;
-  color: #ffffff;
-}
-.button a {
-  text-decoration: none;
-}
-
-.btn1 {
-  background-color: #ffffff;
-  padding: 10px;
-  border-radius: 4px;
-  margin-right: 15px;
-  margin-top: 2rem;
-}
-.btn1:hover {
-  background-color: #f6f6f6;
-}
-.btn2 {
-  background-color: #023781;
-  padding: 10px;
-  color: #ffffff;
-  border-radius: 4px;
 }
 
 /* -----------------Link to form--------------- */
@@ -218,6 +198,20 @@ ul .tapcolor {
     opacity: 1;
   }
 }
+@keyframes popUp {
+  0% {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.popup-modal {
+  animation: popUp 1s ease-in-out;
+}
 
 .home .slide-in-left {
   animation: slideInLeft 1s ease-in-out;
@@ -245,7 +239,7 @@ ul .tapcolor {
 .swiper-container {
   min-width: 100%;
   padding: 20px 0;
-  overflow: hidden; /* Prevent horizontal scroll */
+  overflow: hidden;
 }
 .swiper-wrapper {
   display: flex;
@@ -256,14 +250,14 @@ ul .tapcolor {
   justify-content: center;
   align-items: center;
   transition: transform 0.3s ease-in-out;
-  margin: 0 0.5%;
+  /* margin: 0 0.5%; */
 }
 
 .swiper-slide .box {
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(81, 81, 81, 0.1);
+  /* box-shadow: 0 0 10px rgba(137, 137, 137, 0.1); */
   max-width: 300px;
   text-align: center;
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
@@ -277,7 +271,7 @@ ul .tapcolor {
   opacity: 0.7;
 }
 
-.swiper-slide img {
+.swiper-slide .image-logo {
   max-width: 100px;
   height: auto;
 }
@@ -331,18 +325,18 @@ ul .tapcolor {
 .footer-col .links li {
   list-style: none;
   margin-bottom: 10px;
-  color: #bfbfbf;
+  color: #ffffff;
 }
 .footer-col .links li a {
   text-decoration: none;
-  color: #bfbfbf;
+  color: #ffffff;
 }
 .footer-col .links li a:hover {
   color: #fff;
 }
 .footer-col p {
   margin: 20px 0;
-  color: #bfbfbf;
+  color: #ffffff;
   max-width: 300px;
 }
 .footer-col .rounded-circle {
@@ -415,13 +409,33 @@ ul .tapcolor {
   }
 }
 @media (max-width: 375px) {
+
+   .popup-modal {
+                top: 5rem;
+                right: 1em;
+                width: 80%;
+                margin: 0 auto;
+            }
+            .popup-modal .d-flex {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .popup-modal img {
+                margin-bottom: 10px;
+            }
+            .popup-modal .close-btn {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
+
   body {
     background-color: #eaeaea;
     padding-top: 100px;
   }
-  .top-bar {
-    width: 100%;
-    justify-content: center;
+  .navbar-brand span {
+    display: none;
   }
   .nav-item a {
     font-weight: 600;
@@ -446,7 +460,12 @@ ul .tapcolor {
   .logo {
     max-width: 100%;
   }
-  .top-bar span {
-    font-size: 12px;
+
+  .consultation-form h2 {
+    font-size: 22px;
+  }
+
+  .uptiimum img {
+    margin-top: 1rem;
   }
 }
